# just-kit-bibermann

./: .gitignore  .pre-commit-config.yaml  README.md  aws.just  backups-cleanup.just  battery-tlp.just  bitwarden-bw.just  bw.just  cleanup-backups.just  core.just  docker-registry.just  docker.just  dot-env-template.just  env.just  gitlab-logs.just  node-setup-with-nvm.just  node-with-nvm.just  oc.just  open-shift.just  poetry-setup-with-pyenv.just  poetry-with-pyenv.just  pre-commit-with-poetry.just  pre-commit-with-uv.just  pyproject.toml  pytest-filter.just  setup-uv.just  tlp.just  uv-setup.just  uv.just
bibermann/: general.just  personal.just
core/: check-cmd.just  check-env.just  dummies.just  general.just  settings.just  setup-project.just
install-instructions/generic/: docker.sh  nvm.sh  poetry.sh  pyenv.sh  uv.sh
install-instructions/linux/debian/: java.sh  make.sh
scripts/: cleanup-backups.sh  color-status.sh  filter_pytest.py  get-pipeline-logs.sh  gl-logs.sh
